# financial-analyst-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  main.py  pyproject.toml  test_edgar_pt.py  test_feedback_find.py  test_parse_fastest.py  test_re_vs_find.py
.jules/: bolt.md  sentinel.md
docs/: agentic_refactor  agentic_refactor.md  architecture.md  blackboard_design.md  blackboard_refactor.md  cli_spec.md  eval_strategy.md  litellm_refactor.md  llm_client_refactor.md  refactor_plan.md  requirements.md  roadmap.md
scripts/: calculate_calculations.py  calculate_modeling.py  financial_model_viewer.html  generate_json.py  markdown_parser.py  market_data.py  organize.py  process_classification.py  simple_frontend_server.py  transform_and_append.py
src/: __init__.py
src/agents/: __init__.py  agent_executor.py  analyzer.py  blackboard_orchestrator.py  curator_agent.py  extractor_orchestrator.py  indexer_agent.py  ingester.py  learning_agent.py  modeler.py  modeler_orchestrator.py
src/cli/: main.py
src/core/: __init__.py  blackboard.py  config.py  exceptions.py
src/pipeline/: analyzer.py  curator_agent.py  extractor.py  extractor_analyst_report.py  extractor_financials.py  extractor_orchestrator.py  indexer_agent.py  ingester.py  modeler.py  modeler_orchestrator.py  queue.py
src/resources/: __init__.py
src/rust_core/: __init__.py  fallback.py  lib.rs
src/services/: __init__.py  ddg_search.py  deepseek_client.py  edgar_client.py  gemini_client.py  llm_client.py  market_data.py  math_solver.py  openrouter_client.py  safe_math_solver.py
src/tools/: __init__.py  access_resources.py  find_chunk.py  investopedia_search.py  keyword_search.py  pull_markdown.py  query_blackboard.py  web_search.py
src/utils/: __init__.py  financial_math.py  formatting.py  markdown_helper.py  math.py  pig_animation.py  tools.py
src/viewer/: index.html  server.py
tests/: conftest.py  test_analyzer.py  test_chat.py  test_config.py  test_extractor.py  test_extractor_orchestrator.py  test_formatting.py  test_indexer.py  test_ingester.py  test_llm_clients.py  test_markdown_table_validator.py  test_math_solver.py  test_modeler.py  test_partial_json_parser.py  test_query.py  test_safe_math_solver.py  test_viewer.py
tests/agents/: test_analyst_report_agent.py  test_automatic_learning.py  test_balance_sheet_agent.py  test_blackboard_orchestrator.py  test_dcf_modeling_agent.py  test_growth_agent.py  (+12 more)
tmp/: .gitkeep
(+75 files in other folders)
