[package]
name = "financial-analyst-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "financial_analyst_cli"
crate-type = ["cdylib"]
path = "src/rust_core/lib.rs"

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
