[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "financial-analyst-cli"
version = "0.1.0"
description = "Financial Analyst CLI assistant using a hybrid Python-Rust engine."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "yfinance>=1.4.1",
]

[project.scripts]
fa = "src.cli.main:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "src.rust_core._rust"
python-source = "."

[tool.uv]
package = true

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
